LUN-2644: Firefox bug fixed with wrong size of Default image

--- a/cms_blogger/static/cms_blogger/css/entry-change-form.css
+++ b/cms_blogger/static/cms_blogger/css/entry-change-form.css
@@ -97,71 +97,75 @@
 .app-cms_blogger.model-blogentrypage #fileInputQueue .thumbnail {
   width: 100%;
 }
-/* line 101, ../sass/imports/entry_change_form/_layout.scss */
+/* line 99, ../sass/imports/entry_change_form/_layout.scss */
+.app-cms_blogger.model-blogentrypage #fileInputQueue .thumbnail a > img {
+  width: 100%;
+}
+/* line 104, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage #fileUpload {
   width: 50%;
   min-height: 200px;
   background: white;
 }
-/* line 106, ../sass/imports/entry_change_form/_layout.scss */
+/* line 109, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .body-wrapper {
   margin-left: 16.7%;
   width: 66.3%;
 }
-/* line 110, ../sass/imports/entry_change_form/_layout.scss */
+/* line 113, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .body-wrapper .control-label {
   display: none;
 }
-/* line 113, ../sass/imports/entry_change_form/_layout.scss */
+/* line 116, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .body-wrapper .col-sm-9 {
   width: 100%;
   padding: 0;
 }
-/* line 117, ../sass/imports/entry_change_form/_layout.scss */
+/* line 120, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .body-wrapper .field-preview_on_top, .app-cms_blogger.model-blogentrypage .body-wrapper .field-preview_on_bottom {
   margin-left: 0;
   margin-right: 0;
 }
-/* line 122, ../sass/imports/entry_change_form/_layout.scss */
+/* line 125, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .custom-collapse {
   background: white;
 }
-/* line 125, ../sass/imports/entry_change_form/_layout.scss */
+/* line 128, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .custom-collapse .widget-body {
   margin-top: 15px;
 }
-/* line 130, ../sass/imports/entry_change_form/_layout.scss */
+/* line 133, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .widget-body {
   background: transparent;
 }
-/* line 134, ../sass/imports/entry_change_form/_layout.scss */
+/* line 137, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .form-horizontal:first-child .control-label {
   display: none;
 }
-/* line 137, ../sass/imports/entry_change_form/_layout.scss */
+/* line 140, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .form-horizontal:first-child .col-sm-9 {
   width: 100%;
   padding-right: 0;
 }
-/* line 143, ../sass/imports/entry_change_form/_layout.scss */
+/* line 146, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .description {
   margin-top: 0px;
   padding: 0;
 }
-/* line 148, ../sass/imports/entry_change_form/_layout.scss */
+/* line 151, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .custom-collapse .widget-body {
   padding: 15px;
   margin-top: 0;
 }
-/* line 152, ../sass/imports/entry_change_form/_layout.scss */
+/* line 155, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .custom-collapse .widget-body input[type="text"] {
   width: 100%;
 }
-/* line 156, ../sass/imports/entry_change_form/_layout.scss */
+/* line 159, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .custom-collapse .header.block {
   margin-bottom: 0 !important;
 }
-/* line 160, ../sass/imports/entry_change_form/_layout.scss */
+/* line 163, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-categories .categ-wrapper {
   border: 1px solid #d5d5d5;
   height: 170px;
@@ -171,57 +175,57 @@
   background: white;
   padding: 6px 15px 5px;
 }
-/* line 169, ../sass/imports/entry_change_form/_layout.scss */
+/* line 172, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-categories .categ-wrapper ul {
   margin: 0;
 }
-/* line 173, ../sass/imports/entry_change_form/_layout.scss */
+/* line 176, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-categories, .app-cms_blogger.model-blogentrypage .right-col .field-seo_title, .app-cms_blogger.model-blogentrypage .right-col .field-meta_keywords {
   margin-bottom: 0;
 }
-/* line 176, ../sass/imports/entry_change_form/_layout.scss */
+/* line 179, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-categories .control-label, .app-cms_blogger.model-blogentrypage .right-col .field-seo_title .control-label, .app-cms_blogger.model-blogentrypage .right-col .field-meta_keywords .control-label {
   width: 100%;
   text-align: left;
   padding-left: 0;
   margin-bottom: 5px;
 }
-/* line 182, ../sass/imports/entry_change_form/_layout.scss */
+/* line 185, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-categories .col-sm-9, .app-cms_blogger.model-blogentrypage .right-col .field-seo_title .col-sm-9, .app-cms_blogger.model-blogentrypage .right-col .field-meta_keywords .col-sm-9 {
   width: 100%;
   padding-right: 0;
 }
-/* line 187, ../sass/imports/entry_change_form/_layout.scss */
+/* line 190, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-categories .help-button {
   position: absolute;
   top: -32px;
   left: 80px;
 }
-/* line 192, ../sass/imports/entry_change_form/_layout.scss */
+/* line 195, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-enable_poster_image, .app-cms_blogger.model-blogentrypage .right-col .field-disqus_enabled {
   margin-top: 15px;
 }
-/* line 195, ../sass/imports/entry_change_form/_layout.scss */
+/* line 198, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-enable_poster_image .control-label, .app-cms_blogger.model-blogentrypage .right-col .field-enable_poster_image .col-sm-9, .app-cms_blogger.model-blogentrypage .right-col .field-disqus_enabled .control-label, .app-cms_blogger.model-blogentrypage .right-col .field-disqus_enabled .col-sm-9 {
   width: 50%;
   padding-right: 0;
   text-align: left;
 }
-/* line 200, ../sass/imports/entry_change_form/_layout.scss */
+/* line 203, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage .right-col .field-enable_poster_image .control-label, .app-cms_blogger.model-blogentrypage .right-col .field-disqus_enabled .control-label {
   padding-left: 0;
 }
-/* line 205, ../sass/imports/entry_change_form/_layout.scss */
+/* line 208, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage #id_save_button {
   background: #555 !important;
   border-color: #555 !important;
   width: 100%;
 }
-/* line 210, ../sass/imports/entry_change_form/_layout.scss */
+/* line 213, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage #id_save_button:hover {
   background-color: #303030 !important;
 }
-/* line 214, ../sass/imports/entry_change_form/_layout.scss */
+/* line 217, ../sass/imports/entry_change_form/_layout.scss */
 .app-cms_blogger.model-blogentrypage #id_publish {
   width: 100%;
 }
