--- a/cms_blogger/static/cms_blogger/sass/imports/entry_change_form/_layout.scss
+++ b/cms_blogger/static/cms_blogger/sass/imports/entry_change_form/_layout.scss
@@ -96,6 +96,9 @@
 
             .thumbnail {
                 width: 100%;
+                a > img {
+                    width: 100%;
+                }
             }
         }
         #fileUpload {
